--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-scikit-learn==0.24.2
+pip==24.0
+scikit-learn==1.3.2
+tensorflow==2.15.0
+pydub==0.25.1
+pandas==2.1.4
+opencv-python==4.8.1.78
+openai-whisper==20231117
+numpy==1.26.2
+moviepy==1.0.3
+matplotlib==3.8.2
+keras=2.15.0
+soundfile==0.12.1
